--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   },
   "author": "Cauã Soares",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ocsoares/class-validator-cpf.git"
+  },
   "keywords": [
     "class-validator",
     "class-validator-CPF",
