--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "class-validator-cpf",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "Um decorator customizado para validar CPF usando o class-validator",
   "main": "dist/index.js",
   "types": "types/index.d.ts",
   "files": [
-    "dist"
+    "dist/",
+    "types/"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
